"add files config"